tests/cpp/internal/negative_case/bad_rvalue_ref_bind_lvalue.cpp
// Phase 1 negative: rvalue reference cannot bind to lvalue.
int main() {
  int x = 42;
  int&& r = x;
  return r;
}
